Fixed starting pageNo and blog tags spacing.

--- a/styles/components/_blog.scss
+++ b/styles/components/_blog.scss
@@ -72,6 +72,7 @@
             color: $color-primary;
             font-weight: 500;
             margin-bottom: $base-margin * 0.9;
+            margin-right: $base-margin * 0.3;
             font-family: $font-primary;
          }
       }
